WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202117
REGRESSION(250143) Disk cache should be enabled for Safari
https://bugs.webkit.org/show_bug.cgi?id=202117
Summary
REGRESSION(250143) Disk cache should be enabled for Safari
Alex Christensen
Reported
2019-09-23 13:22:14 PDT
REGRESSION(250143) Disk cache should be enabled for Safari
Attachments
Patch
(7.08 KB, patch)
2019-09-23 13:23 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(7.07 KB, patch)
2019-09-23 13:26 PDT
,
Alex Christensen
beidson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-23 13:22:36 PDT
(In reply to Alex Christensen from
comment #0
)
> REGRESSION(250143) Disk cache should be enabled for Safari
It probably should :)
Alex Christensen
Comment 2
2019-09-23 13:23:42 PDT
Created
attachment 379386
[details]
Patch
Alex Christensen
Comment 3
2019-09-23 13:26:16 PDT
Created
attachment 379388
[details]
Patch
Alex Christensen
Comment 4
2019-09-23 14:08:45 PDT
http://trac.webkit.org/r250254
Radar WebKit Bug Importer
Comment 5
2019-09-23 14:09:21 PDT
<
rdar://problem/55636598
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug