REGRESSION(250143) Disk cache should be enabled for Safari https://bugs.webkit.org/show_bug.cgi?id=202117

Reviewed by Brady Eidson.

r250143 made it so in Safari, when setCacheModel is called for the first time in NetworkProcess::initializeNetworkProcess,
it didn't have a path to check available disk space.  This resulted in disabling the disk cache in Safari, which caused a
huge performance regression.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::initializeNetworkProcess):
(WebKit::NetworkProcess::setCacheModel):
* NetworkProcess/NetworkProcess.h:
(WebKit::NetworkProcess::setCacheModel):
* NetworkProcess/NetworkProcess.messages.in:
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::ensureNetworkProcess):
(WebKit::WebProcessPool::setCacheModel):



Canonical link: https://commits.webkit.org/215719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250254 268f45cc-cd09-0410-ab3c-d52691b4dbfc